--- a/style.css
+++ b/style.css
@@ -1,3 +1,77 @@
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 body{
     font-family: 'Kumbh Sans', sans-serif;
+    background: linear-gradient(hsl(273, 75%, 66%),hsl(240, 73%, 65%));
+    display: flex;
+    align-items: center;
+    min-height: 100vh;
+    padding: 200px 0 100px 0;
 }
+
+
+main{
+    width: 90%;
+    margin: auto;
+    background-color: #fff;
+    border-radius: 20px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.397);
+    padding: 20px;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.svg-bg{
+    width: 80%;
+    margin: auto;
+    transform: translateY(-70%);
+}
+
+.faq-container{
+    width: 90%;
+    margin-top: -30%;
+}
+
+.faq-header{
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+.faq-questions{
+    width: 100%;
+}
+
+.faq-question{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5px 0;
+    margin-bottom: 20px;
+}
+
+.faq-question p{
+    font-size: 12px;
+}
+
+.faq-question img{
+    width: 10px;
+}
+
+
+.faq-answers{
+    display: none;
+    margin-bottom: 10px;
+    transform: translate(0 , 30px);
+}
+
+.faq-answers p{
+    font-size: 12px;
+}
+
